force-app/main/default/objects/ST_ACR_Consumption__c/ST_ACR_Consumption__c.object-meta.xml
<CustomObject>
    <label>ACR Consumption</label>
    <nameField>
        <displayFormat>ACRC-{00000000}</displayFormat>
        <label>ACR Consumption  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACR Consumption</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>