force-app/main/default/objects/ST_ACR_Consumption__c/fields/Adjusted_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Contract_Amount__c</fullName>
    <label>Adjusted Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>