force-app/main/default/objects/ST_ACR_Consumption__c/fields/Annual_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Date__c</fullName>
    <label>Annual Contract Date</label>
    <type>Date</type>
</CustomField>