force-app/main/default/objects/ST_ACR_Consumption__c/fields/Annual_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_ID__c</fullName>
    <label>Annual Contract ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>