force-app/main/default/objects/ST_ACR_Consumption__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ACR Consumption (Bill To Account)</relationshipLabel>
    <relationshipName>ACR_Consumption1</relationshipName>
    <type>Lookup</type>
</CustomField>