force-app/main/default/objects/ST_ACR_Consumption__c/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>ACR Consumption</relationshipLabel>
    <relationshipName>ACR_Consumption</relationshipName>
    <type>Lookup</type>
</CustomField>