force-app/main/default/objects/ST_ACR_Consumption__c/fields/BVC_Branch__c.field-meta.xml
<CustomField>
    <fullName>BVC_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Branch</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>ACR Consumption</relationshipLabel>
    <relationshipName>ACR_Consumption</relationshipName>
    <type>Lookup</type>
</CustomField>