force-app/main/default/objects/ST_ACR_Consumption__c/fields/BVC_Valuation_Charges__c.field-meta.xml
<CustomField>
    <fullName>BVC_Valuation_Charges__c</fullName>
    <label>BVC Valuation Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>