force-app/main/default/objects/ST_ACR_Consumption__c/fields/Confirmation_Reference__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Reference__c</fullName>
    <label>Confirmation Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>