force-app/main/default/objects/ST_ACR_Consumption__c/fields/Confirmed_By_Phone__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By_Phone__c</fullName>
    <label>Confirmed By Mobile</label>
    <type>Phone</type>
</CustomField>