force-app/main/default/objects/ST_ACR_Consumption__c/fields/Consignee_PAN__c.field-meta.xml
<CustomField>
    <fullName>Consignee_PAN__c</fullName>
    <label>Consignee PAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>