force-app/main/default/objects/ST_ACR_Consumption__c/fields/Consumption__c.field-meta.xml
<CustomField>
    <fullName>Consumption__c</fullName>
    <label>Consumption %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>