force-app/main/default/objects/ST_ACR_Consumption__c/fields/Consumption_Original_number__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Original_number__c</fullName>
    <label>Original ACR Consumption</label>
    <length>150</length>
    <type>Text</type>
</CustomField>