force-app/main/default/objects/ST_ACR_Consumption__c/fields/Consumption_status__c.field-meta.xml
<CustomField>
    <fullName>Consumption_status__c</fullName>
    <formula>IF(Bill_To_Account__r.Balance_Amount__c &lt;0 , &apos;Overconsumed&apos;, &apos;Within Limit&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumption status</label>
    <type>Text</type>
</CustomField>