force-app/main/default/objects/ST_ACR_Consumption__c/fields/Consumtion_status_Static__c.field-meta.xml
<CustomField>
    <fullName>Consumtion_status_Static__c</fullName>
    <formula>IF(ISPICKVAL( ST_ACR_Order__r.Order_Status_Static__c, &apos;Activated&apos;) , &apos;Activated&apos;, IF(ISPICKVAL(ST_ACR_Order__r.Order_Status_Static__c, &apos;Cancelled&apos;) , &apos;cancelled&apos;, null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumtion status(Static)</label>
    <type>Text</type>
</CustomField>