force-app/main/default/objects/ST_ACR_Consumption__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ACR Consumption</relationshipLabel>
    <relationshipName>ACR_Consumption_del</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>