force-app/main/default/objects/ST_ACR_Consumption__c/fields/Contract_Balance__c.field-meta.xml
<CustomField>
    <fullName>Contract_Balance__c</fullName>
    <label>Contract Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>