force-app/main/default/objects/ST_ACR_Consumption__c/fields/Contract_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date_To__c</fullName>
    <label>Contract Date To</label>
    <type>Date</type>
</CustomField>