force-app/main/default/objects/ST_ACR_Consumption__c/fields/Contract_Extended_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extended_Date_To__c</fullName>
    <label>Contract Extended Date To</label>
    <type>Date</type>
</CustomField>