force-app/main/default/objects/ST_ACR_Consumption__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <formula>Contract__r.Contract_Signed_Date__c</formula>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>