force-app/main/default/objects/ST_ACR_Consumption__c/fields/Customer_PAN__c.field-meta.xml
<CustomField>
    <fullName>Customer_PAN__c</fullName>
    <formula>Customer_Account__r.PAN_Number_of_Entity__c</formula>
    <label>PAN</label>
    <type>Text</type>
</CustomField>