force-app/main/default/objects/ST_ACR_Consumption__c/fields/Customer_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Category__c</fullName>
    <formula>TEXT(Shipment__r.Customer_Product_Category__c)</formula>
    <label>Customer Product Category</label>
    <type>Text</type>
</CustomField>