force-app/main/default/objects/ST_ACR_Consumption__c/fields/Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>ACR Consumption (Destination Address)</relationshipLabel>
    <relationshipName>ACR_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>