force-app/main/default/objects/ST_ACR_Consumption__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <formula>Shipment__r.Destination_Address_Name__r.CITY__c</formula>
    <label>Destination City</label>
    <type>Text</type>
</CustomField>