force-app/main/default/objects/ST_ACR_Consumption__c/fields/Destination_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Destination_Pincode__c</fullName>
    <formula>Shipment__r.Destination_Address_Name__r.PINCODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Pincode</label>
    <type>Text</type>
</CustomField>