force-app/main/default/objects/ST_ACR_Consumption__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <formula>Shipment__r.Destination_Address_Name__r.STATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination State</label>
    <type>Text</type>
</CustomField>