force-app/main/default/objects/ST_ACR_Consumption__c/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition</label>
    <referenceTo>ST_Exhibition__c</referenceTo>
    <relationshipLabel>ACR Consumption</relationshipLabel>
    <relationshipName>ACR_Consumption_del</relationshipName>
    <type>Lookup</type>
</CustomField>