force-app/main/default/objects/ST_ACR_Consumption__c/fields/Exhibition_Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Movement_Type__c</fullName>
    <label>Exhibition Movement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inward</fullName>
            </value>
            <value>
                <fullName>Outward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>