force-app/main/default/objects/ST_ACR_Consumption__c/fields/Exhibition_name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_name__c</fullName>
    <formula>Exhibition__r.ST_Exhibition_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition name</label>
    <type>Text</type>
</CustomField>