force-app/main/default/objects/ST_ACR_Consumption__c/fields/Fuel_Charges__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Charges__c</fullName>
    <label>Fuel Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>