force-app/main/default/objects/ST_ACR_Consumption__c/fields/Gross_Weight_GMS__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_GMS__c</fullName>
    <label>Gross Weight(GMS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>