force-app/main/default/objects/ST_ACR_Consumption__c/fields/Gross_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_Kg__c</fullName>
    <label>Gross Weight(Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>