force-app/main/default/objects/ST_ACR_Consumption__c/fields/Handling_Charges_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Handling_Charges_Inbound__c</fullName>
    <label>Handling Charges Inbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>