force-app/main/default/objects/ST_ACR_Consumption__c/fields/Holiday_Charges__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Holiday Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>