force-app/main/default/objects/ST_ACR_Consumption__c/fields/Initiator_PAN__c.field-meta.xml
<CustomField>
    <fullName>Initiator_PAN__c</fullName>
    <label>Initiator PAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>