force-app/main/default/objects/ST_ACR_Consumption__c/fields/Insurance_By_BVC__c.field-meta.xml
<CustomField>
    <fullName>Insurance_By_BVC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance By BVC</label>
    <type>Checkbox</type>
</CustomField>