force-app/main/default/objects/ST_ACR_Consumption__c/fields/Liability_charges__c.field-meta.xml
<CustomField>
    <fullName>Liability_charges__c</fullName>
    <label>Liability charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>