force-app/main/default/objects/ST_ACR_Consumption__c/fields/Logistics_Charges__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Charges__c</fullName>
    <label>Logistics Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>