force-app/main/default/objects/ST_ACR_Consumption__c/fields/Minimum_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Charge__c</fullName>
    <label>Minimum Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>