force-app/main/default/objects/ST_ACR_Consumption__c/fields/Net_Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_kg__c</fullName>
    <label>Net Weight(kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>