force-app/main/default/objects/ST_ACR_Consumption__c/fields/Net_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_UOM__c</fullName>
    <label>Net Weight UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gram</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Carat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>