force-app/main/default/objects/ST_ACR_Consumption__c/fields/No_Of_Packages__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Packages__c</fullName>
    <label>No Of Packages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>