force-app/main/default/objects/ST_ACR_Consumption__c/fields/No_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>No_of_Shipment__c</fullName>
    <label>No of Shipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>