force-app/main/default/objects/ST_ACR_Consumption__c/fields/of_ACR__c.field-meta.xml
<CustomField>
    <fullName>of_ACR__c</fullName>
    <formula>((Total_Charge__c + Contract__r.Consumed_Amount__c )/ Contract__r.Contract_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of ACR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>