force-app/main/default/objects/ST_ACR_Consumption__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <label>Oracle ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>