force-app/main/default/objects/ST_ACR_Consumption__c/fields/Origin_Address__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>ACR Consumption (Origin Address)</relationshipLabel>
    <relationshipName>OriginConsumption</relationshipName>
    <type>Lookup</type>
</CustomField>