force-app/main/default/objects/ST_ACR_Consumption__c/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <formula>Shipment__r.Origin_Address_Name__r.CITY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin City</label>
    <type>Text</type>
</CustomField>