force-app/main/default/objects/ST_ACR_Consumption__c/fields/Origin_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Origin_Pincode__c</fullName>
    <formula>Shipment__r.Origin_Address_Name__r.PINCODE__c</formula>
    <label>Origin Pincode</label>
    <type>Text</type>
</CustomField>