force-app/main/default/objects/ST_ACR_Consumption__c/fields/Origin_State__c.field-meta.xml
<CustomField>
    <fullName>Origin_State__c</fullName>
    <formula>Shipment__r.Origin_Address_Name__r.STATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin State</label>
    <type>Text</type>
</CustomField>