force-app/main/default/objects/ST_ACR_Consumption__c/fields/Shipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Number__c</fullName>
    <label>Shipment Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>