force-app/main/default/objects/ST_ACR_Consumption__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <label>Shipper Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>