force-app/main/default/objects/ST_ACR_Consumption__c/fields/Shipper_PAN__c.field-meta.xml
<CustomField>
    <fullName>Shipper_PAN__c</fullName>
    <label>Shipper PAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>