force-app/main/default/objects/ST_ACR_Consumption__c/fields/ST_ACR_Order__c.field-meta.xml
<CustomField>
    <fullName>ST_ACR_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACR Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>ACR Consumption</relationshipLabel>
    <relationshipName>ACR_Consumption</relationshipName>
    <type>Lookup</type>
</CustomField>