force-app/main/default/objects/ST_ACR_Consumption__c/fields/ST_Contract_Extended_Date_To__c.field-meta.xml
<CustomField>
    <fullName>ST_Contract_Extended_Date_To__c</fullName>
    <formula>Contract__r.EndDate</formula>
    <label>Contract Extended Date To</label>
    <type>Date</type>
</CustomField>