force-app/main/default/objects/ST_ACR_Consumption__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &apos;Invalid&apos;) , Image(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;) ,  IF( ISPICKVAL(Status__c, &apos;Valid&apos;) , Image(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/resource/blng__images/Flag_white.gif&quot;, &quot;White&quot;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>