force-app/main/default/objects/ST_ACR_Consumption__c/fields/Total_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge__c</fullName>
    <label>Total Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>