force-app/main/default/objects/ST_ACR_Consumption__c/fields/Vaulting_Charges__c.field-meta.xml
<CustomField>
    <fullName>Vaulting_Charges__c</fullName>
    <label>Vaulting Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>